<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Movies &amp; TV Show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_movies">Movies</string>
    <string name="tab_tvshow">TV Show</string>
    <string name="menu_setting">Setting</string>
    <string name="image">image</string>
    <string name="movies_title">Movie Title</string>
    <string name="description">Movie Description</string>
    <string name="director">Director</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="season">Season</string>
    <string name="textview">TextView</string>
    <string name="select_language">Select Language</string>
    <string name="language">Language</string>


    <string-array name="data_name">
        <item>Aquaman</item>
        <item>Avenger Infinity War</item>
        <item>Bird Box</item>
        <item>Bumble Bee</item>
        <item>Creed II</item>
        <item>Deadpool</item>
        <item>Dragon</item>
        <item>DragonBall</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Marry Popins</item>
        <item>Mortal Engine</item>
        <item>Robinhood</item>
        <item>Spiderman</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_release">
        <item>21 December 2018 </item>
        <item>25 April 2018</item>
        <item>14 December 2018</item>
        <item>19 December 2018</item>
        <item>28 November 2018</item>
        <item>10 February 2016</item>
        <item>9 January 2019</item>
        <item>17 December 2011</item>
        <item>16 January 2019 </item>
        <item>24 October 2018</item>
        <item>26 August 1964</item>
        <item>13 December 2018</item>
        <item>20 November 2018</item>
        <item>3 July 2019</item>
        <item>3 October 2018</item>
    </string-array>

    <string-array name="data_director">
        <item>James Wan</item>
        <item>Russo Bersaudara</item>
        <item>Susanne Bier</item>
        <item>Travis Knight</item>
        <item>Steven Caple Jr.</item>
        <item>Tim Miller</item>
        <item>Dean DeBlois</item>
        <item>Akira Toriyama</item>
        <item>M. Night Shyamalan</item>
        <item>Donovan Marsh</item>
        <item>Robert Stevenson</item>
        <item>Christian Rivers</item>
        <item>Otto Bathurst</item>
        <item>Jon Watts</item>
        <item>Ruben Fleischer</item>
    </string-array>

    <string-array name="data_description">
        <item>This film reveals the origin of Arthur Curry, a mighty human who can control water and sea animals. Where did he get his strength? Who are his parents, and does he deserve to be a king in the ocean?</item>
        <item>The Avengers and their allies must be willing to sacrifice everything in an effort to defeat the powerful Thanos before he succeeds in destroying the universe.</item>
        <item>Bird Box is a 2018 film produced from the United States post-apocalyptic genre. The film was directed by Susanne Bier, a script written by Eric Heisserer, based on a novel of the same name, by novelist Josh Malerman, published in 2014</item>
        <item>During a run in 1987, Bumblebee found shelter in a junkyard in a small California coastal town. Charlie, the girl who was touching the age of 18 and was looking for identity, found Bumblebee, who was scratched and damaged a lot. While trying to make it work again, Charlie saw for himself that this was not an ordinary yellow VW frog.</item>
        <item>Creed II will continue the story of Adonis Johnson inside and outside the ring as he faces fame, family problems and an ongoing mission to become a true champion.</item>
        <item>Deadpool is an American superhero film based on the Marvel Comics character of the same name. The film is the eighth installment in the X-Men film series</item>
        <item>In this third film, it will be about Hiccup (Jay Baruchel) who is trying to fulfill his dream of creating a dream land for Vikings and dragons.</item>
        <item>Dragon Ball is a manga and anime by Akira Toriyama from 1984 to 1995. His album consists of 42 books and in Indonesia was published by Elex Media Komputindo. Previously Dragon Ball was also published by Rajawali Grafiti.</item>
        <item>Film Glass will continue the search for Kevin Wendell Crumb who escaped after kidnapping the girls. Kevin Wendel Crumbang has 20 personalities in one soul and can turn into a monster when his personality named The Beast appears.</item>
        <item>Hunter Killer will tell about the mission of the United States submarine team to rescue the Russian president who was couped by militant groups in his country ..</item>
        <item>Mary Poppins is a 1964 United States musical film starring Julie Andrews and Dick Van Dyke, released by Walt Disney, and based on the Mary Poppins book series by P. L. Travers with illustrations by Mary Shepard.</item>
        <item>Mortal Engines tells the state of the world after the end. Tom is a twenty-year-old Londoner who only lived in his hometown, and his feet never touched grass, mud or soil.</item>
        <item>Robin Hood (Taron Egerton) as a crusader returned to his country under different circumstances. He found corrupt officials and spent royal money while the people were miserable. Together with Little John (Jamie Foxx), he fought a very strong British tyranny.</item>
        <item>Spider-Man, is a fictional superhero from Marvel Comics created by writer Stan Lee and artist Steve Ditko. He first appeared in Amazing Fantasy # 15. He has become one of the most famous superheroes in the world.</item>
        <item>A journalist, Eddie Brock (Tom Hardy) wants to make an investment case for the discovery led by Dr. Carlton Drake (Riz Ahmed). Because of his investigation, Eddie visited Dr.s lab Calrlton Drake. Everything is intended to prove that Dr. Carlton Drake is doing an evil act using Symbiote.</item>

    </string-array>

    <array name="data_photo">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </array>

    <string-array name="data_tvShow_title">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Fairy Tail</item>
        <item>Flash</item>
        <item>Gotham</item>
        <item>Greys Anatomy</item>
        <item>Iron Fist</item>
        <item>Naruto Shippuden</item>
        <item>The Simpsons</item>
        <item>The Walking Dead</item>
    </string-array>

    <string-array name="data_tvShow_season">
        <item>8</item>
        <item>2</item>
        <item>1</item>
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>2</item>
        <item>21</item>
        <item>30</item>
        <item>10</item>
    </string-array>

    <string-array name="data_tvShow_poster">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_grey_anatomy</item>
        <item>@drawable/poster_iron_fist</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_the_simpson</item>
        <item>@drawable/poster_the_walking_dead</item>

    </string-array>

    <string-array name="data_tvShow_description">
        <item>Arrow is an American television series developed by Greg Berlanti, Andrew Kreisberg, and Geoff Johns, who air on The CW. The series is based on the DC Comics Green Arrow, a costumed superhero, crime-takers who are armed with bows and arrows.</item>
        <item>Translated from English-Doom Patrol is an American web television series created by Jeremy Carver for DC Universe. Based on the DC Comics superhero team of the same name, this series features Jane, Rita Farr, Vic Stone, Larry Trainor, Cliff Steele, and Chairman as members of the titular Doom patrol.</item>
        <item>Fairy Tail is a Japanese manga series written and illustrated by Hiro Mashima. This manga was published in Weekly Shōnen Magazine from August 2, 2006 to July 26, 2017, and has been bundled and published into 63 tankōbon volumes by Kodansha.</item>
        <item>The Flash is a super hero who appears in comics published by DC Comics. This character first appeared in Showcase # 4, which was created by writer Robert Kanigher and peneril Carmine Infantino.</item>
        <item>Gotham is a United States crime drama television series developed by Bruno Heller, based on characters published by DC Comics and appearing in the Batman franchise, especially those belonging to James Gordon and Bruce Wayne. Heller and Danny Cannon, who direct the pilot, are executive producers.</item>
        <item>Gray Anatomy is one of the United States films produced by The Touchstone Pictures, the film was first shown on ABC television station and consisted of 147 episodes. This series tells about the main character, Dr. Meredith Gray, in her daily life as a surgeon with her friends.</item>
        <item>Marvel Iron Fist or simply Iron Fist is an American television show created for Netflix by Scott Buck, based on the Marvel Comic character of the same name.</item>
        <item>Naruto Shippuden is an anime series adapted from part II of the Naruto manga. The series was directed by Hayato Date and produced by Studio Pierrot and TV Tokyo. In this section, the movement of the Akatsuki organization is increasingly visible.</item>
        <item>The Simpsons is a United States comedy cartoon series created by Matt Groening. The program first started airing as a snippet of the Tracey Ullman Show in 1987.</item>
        <item>The Walking Dead is an American post-apocalyptic horror television series developed by Frank Darabont for AMC, based on the comic book series of the same name by Robert Kirkman, Tony Moore, and Charlie Adlard.</item>
    </string-array>

</resources>
