<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#ffffff"
    android:padding="16dp"
    android:layout_marginBottom="2dp">

    <ImageView
        android:id="@+id/img_movies_poster"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/poster_venom"
        android:contentDescription="@string/image" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_movies_poster"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_movies_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/movies_title" />
        <TextView
            android:id="@+id/tv_movies_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/description" />
    </LinearLayout>
</RelativeLayout>